Edited wiki page through web user interface.

--- a/wiki/TODO_documentacion_matlab.wiki
+++ b/wiki/TODO_documentacion_matlab.wiki
@@ -1,3 +1,4 @@
 = Cosas para no olvidar al documentar sobre Matlab =
 
  * En linux hay que instalar el paquete csh para que funcionen las librerías que usan en Engine de Matlab.
+ * LD_LIBRARY_PATH=/opt/matlab/bin/glnx86/:/opt/matlab/sys/os/glnx86/
