Edited wiki page TODO_documentacion_matlab through web user interface.

--- a/wiki/TODO_documentacion_matlab.wiki
+++ b/wiki/TODO_documentacion_matlab.wiki
@@ -2,3 +2,4 @@
 
  * En linux hay que instalar el paquete csh para que funcionen las librerías que usan en Engine de Matlab.
  * LD_LIBRARY_PATH=/opt/matlab/bin/glnx86/:/opt/matlab/sys/os/glnx86/
+ * En Eclipse, poner en la opción VM arguments del proyecto: -Djava.library.path="." para que encuentre la dll de jmathlink en el directorio del proyecto (típicamente "examples").
